syntax="proto3";

package content;
option go_package="genproto/content_service";

message Handbook {
    string id = 1;
    string title = 2;
    string slug = 3;
    string lang = 4;
    string url_link = 5;
    string description = 6;
    bool active = 7;
    string created_at = 8;
    string updated_at = 9;
    string date = 10;
    string access_type = 11;
}

message GetOneRequest {
    string id = 2;
}

message GetOneHandbookResponse {
    string id = 1;
    string title = 2;
    string slug = 3;
    string lang = 4;
    string url_link = 5;
    string description = 6;
    bool active = 7;
    string created_at = 8;
}

message GetHandbooksRequest {
    uint32 limit = 1;
    uint32 page = 2;
    map<string, string> options = 3;
}

message GetHandbooksResponse {
    uint32 count = 1;
    repeated Handbook handbooks = 2;
}